<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:id="@+id/settingsLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settingsInfo"
        android:id="@+id/textView1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/extraSecuritySequenceInfo"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/extraSecuritySequenceText"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/extraSecuritySequence"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/startIndexInfo"
        android:id="@+id/textView4"
        android:layout_below="@+id/extraSecuritySequence"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/startIndexText"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/startIndex"
        android:inputType="number"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/endIndexInfo"
         android:id="@+id/textView6"
         android:layout_below="@+id/startIndex"
         android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/endIndexText"
         android:id="@+id/textView7"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true" />

     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/endIndex"
         android:digits="0123456789."
         android:inputType="numberDecimal"
         android:layout_below="@+id/textView7"
         android:layout_centerHorizontal="true" />

     <Button android:id="@+id/save"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/endIndex"
         android:layout_marginTop="20dp"
         android:text="@string/save"
         android:background="@color/save_button"
         android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"
         android:onClick="save"/>

     <Button android:id="@+id/cancel"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/save"
         android:text="@string/cancel"
         android:background="@color/cancel_button"
         android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"
         android:onClick="cancel"/>

     <Button android:id="@+id/reset"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cancel"
         android:layout_marginTop="20dp"
         android:text="@string/reset"
         android:background="@color/reset_button"
         android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"
         android:onClick="reset"/>

</RelativeLayout>

</ScrollView>