<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:id="@+id/mainLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_url"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/siteTag"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enter_url_example"
        android:id="@+id/textView5"
        android:layout_below="@+id/siteTag"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_master_password"
        android:id="@+id/textView6"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/masterPassword"
        android:layout_below="@+id/textView6"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/eye"
        android:src="@drawable/unmask32"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@+id/masterPassword"
        android:layout_marginLeft="30dp"
        android:onClick="onEyeClick"
        android:layout_alignTop="@+id/masterPassword"/>

    <Button android:id="@+id/generate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/masterPassword"
        android:layout_marginTop="50dp"
        android:text="@string/generate"
        android:background="@color/generate_button"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:onClick="generatePassword"/>

</RelativeLayout>

</ScrollView>